# elearning-backend

./: .env.sample  .flake8  README.md  alembic.ini  delete_users.py  docker-compose.yml  pyproject.toml  test.db  基本設計書.md  要件定義.md  要望.md
alembic/: env.py
alembic/versions/: 4918c96ea78f_add_content_and_category_models.py  7b773d3e1643_add_assessment_and_quiz_tables.py  96e174832c9c_add_password_hash_and_refresh_token_to_.py  c44b7eb9fbad_initial_migration_with_all_tables.py  d320f16aa387_add_learning_progress_tables.py
scripts/: build.sh  clean.sh  fix-db.sh  init-db.sh  rebuild.sh  start.sh  test.sh
src/: __init__.py  main.py
src/api/v1/: __init__.py  api.py  assessment.py  auth.py  contents.py  deps.py  learning.py  users.py
src/config/: __init__.py  database.py  settings.py
src/models/: __init__.py  assessment.py  base.py  content.py  learning.py  user.py
src/schemas/: __init__.py  assessment.py  auth.py  content.py  learning.py  user.py
src/services/: assessment_service.py  auth_service.py  content_service.py  learning_service.py  user_service.py
src/utils/: __init__.py  common.py  security.py
tests/: conftest.py
tests/test_api/: __init__.py  test_assessment.py  test_auth.py  test_contents.py  test_learning.py
tests/test_service/: __init__.py  test_content_service.py  test_learning_service.py  test_user_service.py
